--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,15 @@
-body {
-    background-color: green;
+@use 'hero';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Roboto, sans-serif;
+    color: #fff;
+}
+
+.container {
+    max-width: 960px;
+    width: 100%;
+    margin: 0 auto;
 }
