--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @use 'hero';
+@use './components/infos_bar';
+@use './components/buttons';
 
 * {
     margin: 0;
@@ -6,10 +8,19 @@
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
     color: #fff;
+    list-style: none;
 }
 
 .container {
     max-width: 960px;
     width: 100%;
     margin: 0 auto;
+
+    @media (max-width: 640px) {
+        width: 80%;
+    }
+    @media (max-width: 1024px) {
+        width: 90%;
+    }
+    
 }
