--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -1,8 +1,29 @@
+@use 'variables';
+
 .event {
-    background-image: linear-gradient(#1B6CA7,#442BDB);
     padding: 80px 0;
+
+    &--frontend {
+        background-image: linear-gradient(variables.$blue1, variables.$blue2);
+    }
+    &--ui-ux {
+        background-image: linear-gradient(variables.$blue2, variables.$pink);
+        .container {
+            flex-direction: row-reverse;
+        }
+    }
+    &--data-science {
+        background-image: linear-gradient(variables.$pink, variables.$yellow);
+    }
+    &--backend {
+        background-image: linear-gradient(variables.$yellow, variables.$pink);
+        .container {
+            flex-direction: row-reverse;
+        }
+    }
     .container {
         display: flex;
+        gap: 40px;
 
         @media (max-width: 640px) {
             display: block;
@@ -10,7 +31,6 @@
     }
 
     &__details {
-        margin-right: 40px;
         @media (max-width: 640px) {
             margin-bottom: 16px;
             margin-right: 0;
