--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 .hero {
     padding-top: 64px;
     padding-bottom:100px;
@@ -12,7 +14,7 @@
 
     &::before {
         position: absolute;
-        background-color: #000;
+        background-color: variables.$secondaryTextColor;
         opacity: .7;
         top: 0;
         left: 0;
