--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,3 +1,5 @@
+@use '../variables';
+
 .button {
     padding: 12px;
     font-size: 18px;
@@ -7,8 +9,8 @@
     text-align: center;
     
     &--primary {
-        background-color: #4F2AC3;
-        color: #fff;
+        background-color: variables.$purple;
+        color: variables.$textColor;
     }
 
     @media (max-width: 640px) {
