--- a/src/styles/components/_infos_bar.scss
+++ b/src/styles/components/_infos_bar.scss
@@ -1,6 +1,8 @@
+@use '../variables';
+
 .infos-bar {
     padding: 16px 24px;
-    background-color: #fff;
+    background-color: variables.$textColor;
     display: flex;
     justify-content: space-between;
 
@@ -8,12 +10,12 @@
         display: flex;
         gap: 40px;
         &__item {
-            color: #000;
+            color: variables.$secondaryTextColor;
             font-size: 14px;
 
             b {
                 display: block;
-                color: #000;
+                color: variables.$secondaryTextColor;
                 font-size: 18px;
             }
         }
